<resources>
    <string name="app_name">Plant Disease</string>
    <string name="welcome_text">Hello, %s</string>
    <string name="location">Location</string>
    <string name="need_permission">Need Permission</string>


    <!-- Content Description -->
    <string name="cd_image_wind">Image Wind</string>
    <string name="cd_image_rain">Image Rain</string>
    <string name="cd_image_humid">Image Humidity</string>
    <string name="cd_image_temp">Image Temperature</string>
    <string name="temp">Temperature</string>
    <string name="rainfall">Rainfall</string>
    <string name="windspeed">Windspeed</string>
    <string name="humidity">Humidity</string>
    <string name="temp_value">%s°C</string>
    <string name="humid_value">%s%%</string>
    <string name="wind_value">%sm/s</string>
    <string name="rain_value">%smm</string>
    <string name="desc_diagnoses">Diagnoses issues with crop</string>
    <string name="list_diseases">List Diseases</string>
    <string name="cd_disease">Image Disease</string>
    <string name="cd_cover_detail">Image Cover Detail</string>
    <string name="related_images">Related Images</string>
    <string name="related_image">Related Image</string>
    <string name="picker_title">Pick crop image with</string>
    <string name="cd_camera">Camera Icon</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cd_back">Image Back</string>
    <string name="cd_flash">Image Flash</string>
    <string name="cd_shot">Image Shot</string>
    <string name="result">Result</string>
    <string name="cd_image_result">Image Crop Result</string>
    <string name="picker_repick">Or Repick with</string>
    <string name="submit">Submit</string>
    <string name="process_please">Processing crop image</string>
    <string name="loading_weather">Loading Weather</string>
    <string name="save">Save</string>

</resources>