<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_180"
            android:background="@color/primary"
            android:padding="@dimen/spacing_24"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvWelcome"
                style="@style/TextLarge.SemiBold.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvLocation"
                tools:text="Hello, User" />

            <TextView
                android:id="@+id/tvLocation"
                style="@style/TextCaption.SemiBold.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_primarydarker_r18"
                android:clickable="true"
                android:drawablePadding="@dimen/spacing_12"
                android:ellipsize="end"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxWidth="200dp"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/spacing_22"
                android:paddingVertical="@dimen/spacing_10"
                android:text="@string/location"
                app:drawableStartCompat="@drawable/ic_gps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvWeather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_110"
            app:cardCornerRadius="@dimen/spacing_5"
            app:cardElevation="@dimen/spacing_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/clHeader">

            <LinearLayout
                android:id="@+id/llWeatherLoading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="@dimen/spacing_110"
                    android:layout_height="@dimen/spacing_110"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clWeatherInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_22">

                <ImageView
                    android:id="@+id/imgTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_image_temp"
                    android:src="@drawable/ic_temp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTemp"
                    style="@style/TextMedium.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:text="@string/temp_value"
                    app:layout_constraintBottom_toTopOf="@+id/tvTempDesc"
                    app:layout_constraintStart_toEndOf="@id/imgTemp"
                    app:layout_constraintTop_toTopOf="@+id/imgTemp"
                    tools:text="32,4°C" />

                <TextView
                    android:id="@+id/tvTempDesc"
                    style="@style/TextCaption.BlackA50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:text="@string/temp"
                    app:layout_constraintBottom_toBottomOf="@+id/imgTemp"
                    app:layout_constraintStart_toEndOf="@id/imgTemp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTemp" />

                <ImageView
                    android:id="@+id/imgHumid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_image_humid"
                    android:src="@drawable/ic_humid"
                    app:layout_constraintStart_toStartOf="@id/imgWind"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvHumidDesc"
                    style="@style/TextCaption.BlackA50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:text="@string/humidity"
                    app:layout_constraintBottom_toBottomOf="@id/imgHumid"
                    app:layout_constraintStart_toEndOf="@id/imgHumid"
                    app:layout_constraintTop_toBottomOf="@id/tvHumid" />

                <TextView
                    android:id="@+id/tvHumid"
                    style="@style/TextMedium.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humid_value"
                    app:layout_constraintBottom_toTopOf="@id/tvHumidDesc"
                    app:layout_constraintStart_toStartOf="@id/tvHumidDesc"
                    app:layout_constraintTop_toTopOf="@id/imgHumid"
                    tools:text="67%" />

                <ImageView
                    android:id="@+id/imgRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_32"
                    android:contentDescription="@string/cd_image_rain"
                    android:src="@drawable/ic_rain"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgTemp" />

                <TextView
                    android:id="@+id/tvRain"
                    style="@style/TextMedium.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rain_value"
                    app:layout_constraintBottom_toTopOf="@id/tvRainDesc"
                    app:layout_constraintStart_toStartOf="@id/tvRainDesc"
                    app:layout_constraintTop_toTopOf="@id/imgRain"
                    tools:text="0.0mm" />

                <TextView
                    android:id="@+id/tvRainDesc"
                    style="@style/TextCaption.BlackA50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:text="@string/rainfall"
                    app:layout_constraintBottom_toBottomOf="@id/imgRain"
                    app:layout_constraintStart_toEndOf="@id/imgRain"
                    app:layout_constraintTop_toBottomOf="@id/tvRain" />

                <ImageView
                    android:id="@+id/imgWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_32"
                    android:layout_marginEnd="@dimen/spacing_10"
                    android:contentDescription="@string/cd_image_wind"
                    android:src="@drawable/ic_wind"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvWindDesc" />

                <TextView
                    android:id="@+id/tvWindDesc"
                    style="@style/TextCaption.BlackA50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/windspeed"
                    app:layout_constraintBottom_toBottomOf="@id/imgWind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvWind" />

                <TextView
                    android:id="@+id/tvWind"
                    style="@style/TextMedium.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_value"
                    app:layout_constraintBottom_toTopOf="@id/tvWindDesc"
                    app:layout_constraintStart_toStartOf="@id/tvWindDesc"
                    app:layout_constraintTop_toTopOf="@id/imgWind"
                    tools:text="3.9m/s" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDiagnose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            app:cardCornerRadius="@dimen/spacing_5"
            app:cardElevation="@dimen/spacing_5"
            app:layout_constraintEnd_toEndOf="@id/cvWeather"
            app:layout_constraintStart_toStartOf="@id/cvWeather"
            app:layout_constraintTop_toBottomOf="@id/cvWeather">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_12">

                <TextView
                    style="@style/TextNormal.Medium.White"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/spacing_12"
                    android:gravity="center_vertical"
                    android:text="@string/desc_diagnoses"
                    app:drawableStartCompat="@drawable/ic_diagnose" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_forward"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvListDisease"
            style="@style/TextMedium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/list_diseases"
            app:layout_constraintStart_toStartOf="@id/cvWeather"
            app:layout_constraintTop_toBottomOf="@id/cvDiagnose" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDisease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginBottom="@dimen/spacing_16"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvListDisease"
            tools:listitem="@layout/item_disease" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>