<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/spacing_24"
    android:background="@drawable/shape_r5"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_32"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvResult"
            style="@style/TextLarge.SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/result"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgResult"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/spacing_8"
            android:contentDescription="@string/cd_image_result"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvResult"
            tools:src="@drawable/placeholder" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/TextNormal.Medium.White"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_8"
            android:includeFontPadding="false"
            android:text="@string/submit"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/spacing_32"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextLarge.SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process_please"
            android:textAlignment="center" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_14" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llResult">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextLarge.SemiBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_42"
            android:layout_marginTop="@dimen/spacing_32"
            android:includeFontPadding="false"
            android:text="@string/picker_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCamera"
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20"
            android:layout_marginBottom="@dimen/spacing_42"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:includeFontPadding="false"
            android:drawablePadding="@dimen/spacing_8"
            android:padding="@dimen/spacing_8"
            android:text="@string/camera"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvGallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvGallery"
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:includeFontPadding="false"
            android:padding="@dimen/spacing_8"
            android:text="@string/gallery"
            android:textAlignment="center"
            android:drawablePadding="@dimen/spacing_8"
            app:drawableTopCompat="@drawable/ic_gallery"
            app:layout_constraintBottom_toBottomOf="@id/tvCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCamera"
            app:layout_constraintTop_toTopOf="@id/tvCamera" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>