<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">


    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_42"
        android:layout_marginBottom="@dimen/spacing_62"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/cd_back"
        android:elevation="@dimen/spacing_line"
        android:focusable="true"
        android:src="@drawable/ic_camera_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_42"
        android:layout_marginBottom="@dimen/spacing_62"
        android:contentDescription="@string/cd_flash"
        android:elevation="@dimen/spacing_line"
        android:src="@drawable/ic_camera_flash_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgShot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_shot"
        android:elevation="@dimen/spacing_line"
        android:src="@drawable/ic_camera_shot"
        app:layout_constraintBottom_toBottomOf="@id/imgBack"
        app:layout_constraintEnd_toStartOf="@id/imgFlash"
        app:layout_constraintStart_toEndOf="@id/imgBack"
        app:layout_constraintTop_toTopOf="@id/imgBack" />

    <androidx.camera.view.PreviewView
        android:id="@+id/previewCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>